syntax = "proto3";

import "acs1.proto";
import "acs3.proto";
import "referendum_contract.proto";

option csharp_namespace = "AElf.Contracts.Referendum";

service ReferendumContract {
    
    option (aelf.csharp_state) = "AElf.Contracts.Referendum.ReferendumState";
    option (aelf.base) = "acs3.proto";
    option (aelf.base) = "acs1.proto";
    option (aelf.base) = "referendum_contract.proto";
}